edited contact details

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <div class="connect-section">
         <div class="connect-text">Connect with me</div>
         <div class="social-buttons">
-          <a href="https://github.com/your-username" target="_blank" class="social-btn" aria-label="GitHub">
+          <a href="https://github.com/Udit-Krishna" target="_blank" class="social-btn" aria-label="GitHub">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://linkedin.com/in/your-profile" target="_blank" class="social-btn" aria-label="LinkedIn">
+          <a href="https://www.linkedin.com/in/udit-krishna/" target="_blank" class="social-btn" aria-label="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="mailto:your@email.com" class="social-btn" aria-label="Email">
+          <a href="mailto:uditkrishna2003@gmail.com" class="social-btn" aria-label="Email">
             <i class="fas fa-envelope"></i>
           </a>
         </div>
