edited experience dates

--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
               <div class="company-info">
                 <h3>Data and Analytics Intern</h3>
                 <h4>Natwest Group</h4>
-                <p class="duration">Jan 2023 - Present</p>
+                <p class="duration">Jun 2024 - Aug 2024</p>
               </div>
             </div>
             <ul class="experience-description">
